systems.  Perl/Tk doesn't seem to use DISPLAY there.

Made the tests' missing module messages more comprehensible.
Hopefully they'll have a lesser tendency to be mistaken for test
failures now.

Skipped UNIX domain sockets tests on MSWin32, which seems not to
support them.

Skipped signals tests on MSWin32, which doesn't seem to do signals.


0.1104 2000.08.12
-----------------

Jaxdahl donated some shell time on his Win32 machine, allowing me to
figure out why POE was failing miserably with ActiveState's Perl port.
I made a bad assumption about source code newlines in
POE::Preprocessor.

Wheel::ListenAccept wasn't as lagged behind Wheel::SocketFactory as I
had thought.  It required only minor changes to be brought up to date.

Skip some tests on Win32 because pipes can't be made non-blocking
there.

Brian Buchanan found and fixed a problem where SIGCHLD would not be
delivered when child processes exited by signal.

Added t/20_accept.t to test Wheel::ListenAccept.

Wrote lib/TestPipe.pm.  This file tries to make a portable two-way
pipe.  It uses a pair of pipe(2)s, or a plain INET socket if that
fails.  This would make a great basis for an open3 thingy.


0.1103 2000.08.06
-----------------

Addi provided an algorithm for automatically detecting incoming
newlines in Filter::Line, and we both implemented it in parallel.  The
best bits of both implementations are in POE::Filter::Line; see the
documentation for how to enable this nifty feature.

Addi caught on that long lines in samples/filterchange.perl were
wrapped by some misguided program.  I reformatted the source so that
no lines are longer than 79 columns, just in case.

Made Wheel::ReadWrite carp about unknown parameters.

Added t/19_filterchange.t to test filter changing between every filter
that supports the get_pending() method.  This test does its damnedest
to make some sort of pipe, trying socketpair and pipe calls before
failing.  The code here could be a good basis for an open3 thing.
