@@ -7,7 +7,7 @@ use strict;
 use Carp;
 
 use vars qw($VERSION);
-$VERSION = '0.1104';
+$VERSION = '0.1105';
 
 sub import {
   my $self = shift;
